Bug 39773 - Choosing "Data:Form..." with hidden columns causes crash.
Summary: Choosing "Data:Form..." with hidden columns causes crash.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-02 13:51 UTC by Rob
Modified: 2011-08-02 18:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rob 2011-08-02 13:51:00 UTC
LibreOffice Speadsheet crashes when selecting "Form..." from the Data menu if there are hidden columns.

Works:

A1 is "Name"
B1 is "Date"
C1 is "Num"

Select columns A through C and select "Data:Forms..."

A form dialog box pops up.

Crash:

Select column B, right click and select "Hide". Select columns A and C and select "Data:Forms..." 

LibreOffice crashes on both OS X and Windows XP Pro.
Comment 1 Jeffrey 2011-08-02 18:35:00 UTC
Reproduced on LibreOffice 3.4  340m1(Build:103) and Master for OpenSuse Linux.

Here is the backtrace for the crash... I might have done it without symbols enabled, but it does locate the segmentation fault. Thanks for the steps.
Comment 2 Markus Mohrhard 2011-08-02 18:41:46 UTC
pushed a patch to master and sent to ML for 3-4