fix for fdo#39773: crash with hidden column in Data->Form